JW-878 wip: fixing scons

--- a/lib/curl-7.24.0/SConscript
+++ b/lib/curl-7.24.0/SConscript
@@ -15,7 +15,7 @@ incpath = binaries_path + 'include/curl/'
 
 VariantDir(vpath + '/src', '#/' + Dir('.').path + '/src')
 
-make_products = ['#/build/lib/curl.lib']
+make_products = ['#/build/lib/curl.lib', '#/build/include/curl/curl.h']
 
 
 def build_curl_for_windows(target,source,env):
