--- a/lib/rapidjson/SConscript
+++ b/lib/rapidjson/SConscript
@@ -8,5 +8,5 @@ rapidjson_path = '#/third_party/rapidjson-1.1.0/include/rapidjson'
 def copy_rapidjson(target, source, env):
     copy_tree(Dir(rapidjson_path).abspath, Dir('#/build/include/rapidjson').abspath)
 
-env.Command([Dir('#/build/include/rapidjson'), '#/build/include/rapidjson/document.h'], Dir(rapidjson_path), copy_rapidjson)
+env.Command('#/build/include/rapidjson/document.h', Dir(rapidjson_path), copy_rapidjson)
 
