--- a/lib/tbb/SConscript
+++ b/lib/tbb/SConscript
@@ -18,7 +18,7 @@ else:
    arch = 'intel64'
 
 vcversion = 'vc14'
-bindir = r'\build\windows_' + arch + '_cl_' + vcversion +'_' + env['TARGET_CONFIG'] #debug is default for now
+bindir = r'build\windows_' + arch + '_cl_' + vcversion +'_' + env['TARGET_CONFIG'] #debug is default for now
 abs_vpath = Dir(vpath).abspath
 
 def build_tbb_for_windows(target,source,env):
@@ -33,12 +33,10 @@ def build_tbb_for_windows(target,source,env):
     subprocess.call("make tbb", shell=True)
     files = glob.iglob(os.path.join(abs_vpath, bindir, "*.dll"))
     for file in files:
-        if os.path.isfile(file):
-            copy(file, env.Dir(env['TOP_BIN']).abspath)
+        copy(file, env.Dir(env['TOP_BIN']).abspath)
     files = glob.iglob(os.path.join(abs_vpath, bindir, "*.lib"))
     for file in files:
-        if os.path.isfile(file):
-            copy(file, env.Dir(env['TOP_LIB']).abspath)
+        copy(file, env.Dir(env['TOP_LIB']).abspath)
     os.chdir(cwd)
 
 #shutil.copytree()
