--- a/lib/thrift/SConscript
+++ b/lib/thrift/SConscript
@@ -2,54 +2,31 @@ import os
 import subprocess
 import sys
 import glob
+from distutils.dir_util import copy_tree
+from shutil import copyfile, copy
 
 print 'installing thrift'
 vpath = '#/third_party/thrift-0.8.0'
 env = DefaultEnvironment()
 
-version = '0.8.0'
 abs_vpath = Dir(vpath).abspath
-abs_toppath = Dir('#').abspath
-thriftcmd = env.Dir(env['TOP_BIN']).abspath + r'\thrift.exe'
 
 msbuild = os.environ['MSBUILD']
 
 def build_thrift_exe_for_windows(target,source,env):
-   cmd = 'xcopy ' + Dir('.').srcnode().abspath + r'\controller\lib\thrift\msvc15\0_8_0\compiler\cpp\* ' + abs_vpath + r'\compiler\cpp /e /y'
-   print cmd
-   subprocess.call(cmd, shell=True)
-   curdir = os.getcwd()
-   os.chdir(abs_vpath + r'\compiler\cpp')
-   print os.getcwd()
-   subprocess.call([msbuild, 'Compiler.sln', '/p:Configuration=Debug', '/p:Platform=x64', '/p:PlatformToolset=v140'])
-#  create_if_needed_dir(env.Dir(env['TOP_BIN']).abspath)
-   cmd = 'copy ' +  abs_vpath + r'\compiler\cpp' + r'\x64\Debug' + r'\thrift.exe ' +  env.Dir(env['TOP_BIN']).abspath + r'\thrift.exe'
-   print cmd
-   subprocess.call(cmd, shell=True)
-   os.chdir(curdir)
+    copy_tree(os.path.join( Dir('.').srcnode().abspath, r'controller\lib\thrift\msvc15\0_8_0\compiler\cpp'), os.path.join(abs_vpath, r'compiler\cpp'))
+    subprocess.call([msbuild, 'Compiler.sln', '/p:Configuration=Debug', '/p:Platform=x64', '/p:PlatformToolset=v140'], cwd = os.path.join(abs_vpath, r'compiler\cpp'))
+    copyfile(os.path.join(abs_vpath, r'compiler\cpp\x64\Debug\thrift.exe'), os.path.join(env.Dir(env['TOP_BIN']).abspath, r'thrift.exe'))
 
  #build libraries
 def build_thrift_libs_for_windows(target,source,env):
-   cmd = 'xcopy ' + Dir('.').srcnode().abspath + r'\controller\lib\thrift\msvc15\0_8_0\lib\cpp\* ' + abs_vpath + r'\lib\cpp /e /y'
-   print cmd
-   subprocess.call(cmd, shell=True)
-   curdir = os.getcwd()
-   os.chdir(abs_vpath + r'\lib\cpp')
-   print os.getcwd()
-   subprocess.call([msbuild, 'thrift.sln', '/p:Configuration=Debug', '/p:Platform=x64', '/p:PlatformToolset=v140'])
+    subprocess.call([msbuild, 'thrift.sln', '/p:Configuration=Debug', '/p:Platform=x64', '/p:PlatformToolset=v140'], cwd = os.path.join(abs_vpath, r'lib\cpp'))
 #   create_if_needed_dir(env.Dir(env['TOP_LIB']).abspath)
-   cmd = 'copy ' +  abs_vpath + r'\lib\cpp' + r'\x64\Debug' + r'\libthrift.lib ' +  env.Dir(env['TOP_LIB']).abspath + r'\thrift.lib'
-   print cmd
-   subprocess.call(cmd, shell=True)
-   cmd = 'copy ' +  abs_vpath + r'\lib\cpp' + r'\x64\Debug' + r'\libthriftnb.lib ' +  env.Dir(env['TOP_LIB']).abspath + r'\thriftnb.lib'
-   print cmd
-   subprocess.call(cmd, shell=True)
-   cmd = 'copy ' +  abs_vpath + r'\lib\cpp\src\*.h ' +  env.Dir(env['TOP_INCLUDE']).abspath + r'\thrift\*'
-   print cmd
-   subprocess.call(cmd, shell=True)
-   os.chdir(curdir)
-
-
+    copyfile(os.path.join(abs_vpath, r'lib\cpp\x64\Debug\libthrift.lib'), os.path.join(env.Dir(env['TOP_LIB']).abspath, r'thrift.lib'))
+    copyfile(os.path.join(abs_vpath, r'lib\cpp\x64\Debug\libthriftnb.lib'), os.path.join(env.Dir(env['TOP_LIB']).abspath, r'thriftnb.lib'))
+    files = glob.iglob(os.path.join(abs_vpath, r"lib\cpp\src\*.h"))
+    for file in files:
+        copy(file, os.path.join(env.Dir(env['TOP_INCLUDE']).abspath, r'thrift'))
 
 
 thrift_exe = '#/build/bin/thrift.exe'
