--- a/lib/rapidjson/SConscript
+++ b/lib/rapidjson/SConscript
@@ -3,7 +3,8 @@ import sys
 from distutils.dir_util import copy_tree
 
 env = DefaultEnvironment()
-rapidjson_path = '#/third_party/rapidjson-1.1.0/include/rapidjson'
+vpath = '#/third_party/rapidjson-1.1.0'
+rapidjson_path = os.path.join(vpath, 'include/rapidjson')
 
 def copy_rapidjson(target, source, env):
     copy_tree(Dir(rapidjson_path).abspath, Dir('#/build/include/rapidjson').abspath)
