JW-878 fixed copying curl

--- a/lib/curl-7.24.0/SConscript
+++ b/lib/curl-7.24.0/SConscript
@@ -18,6 +18,7 @@ make_products = ['#/build/lib/curl.lib', '#/build/include/curl/curl.h']
 def build_curl_for_windows(target,source,env):
     subprocess.call(['nmake', '/f', 'Makefile.vc', 'mode=static', 'MACHINE=x64'], cwd=os.path.join(Dir(vpath).abspath, 'winbuild'))
     copy_tree(Dir(os.path.join(vpath,binaries_path)).abspath, Dir('#/build').abspath)
+    os.rename(File('#/build/lib/libcurl_a.lib').abspath, File('#/build/lib/curl.lib').abspath)
 
 
 
