--- a/lib/tbb/SConscript
+++ b/lib/tbb/SConscript
@@ -31,6 +31,8 @@ def build_tbb_for_windows(target,source,env):
     os.chdir(abs_vpath)
     subprocess.call("make tbb", shell=True)
     
+    if not os.path.exists(env.Dir(env['TOP_BIN']).abspath):
+        os.makedirs(env.Dir(env['TOP_BIN']).abspath)
     copyfile(os.path.join(abs_vpath, bindir, "tbb_debug.dll"), os.path.join(env.Dir(env['TOP_BIN']).abspath, 'tbb_debug.dll'))
     copyfile(os.path.join(abs_vpath, bindir, "tbb_debug.lib"), os.path.join(env.Dir(env['TOP_LIB']).abspath, 'tbb_debug.lib'))
     
