--- a/lib/gunit/SConscript
+++ b/lib/gunit/SConscript
@@ -1,21 +1,35 @@
 # -*- mode: python; -*-
-print 'enter gunit..'
+
 import platform
 import os
-import subprocess
-import shutil
 
 default = DefaultEnvironment()
 env = default.Clone()
 
-gtest_path = '#/third_party/googletest-release-1.8.0/googletest'
-gmock_path = '#/third_party/googletest-release-1.8.0/googlemock'
+(distname, version, _) = platform.dist()
+if distname != 'Ubuntu' or float(version) < 14.04:
+    if platform.system() == 'Windows':
+        gtest_path = '#/third_party/googletest-release-1.8.0/googletest'
+        gmock_path = '#/third_party/googletest-release-1.8.0/googlemock'
+    else:
+        gtest_path = '#/third_party/gtest-1.6.0'
+        gmock_path = '#/third_party/gmock-1.6.0'
 
-gtest_dir = env.Install('#/build/include', gtest_path + '/include/gtest')
-gmock_dir = env.Install('#/build/include', gmock_path + '/include/gmock')
-gunit_h = env.Install('#/build/include/testing', 'gunit.h')
-env.Depends(gunit_h, [gtest_dir, gmock_dir])
+    gtest_dir = env.Install('#/build/include', gtest_path + '/include/gtest')
+    gmock_dir = env.Install('#/build/include', gmock_path + '/include/gmock')
+    gunit_h = env.Install('#/build/include/testing', 'gunit.h')
+    env.Depends(gunit_h, [gtest_dir, gmock_dir])
+else:
+    if distname == 'Ubuntu' and float(version) == 16.04:
+        gtest_path = '/usr/src/gtest'
+        gtest_dir = env.Install('#/build/include', gtest_path)
+    else:
+        gtest_path = '/usr/src/gmock/gtest'
+        gtest_dir = env.Install('#/build/include', gtest_path + '/include/gtest')
 
+    gmock_path = '/usr/src/gmock'
+    gunit_h = env.InstallAs('#/build/include/testing/gunit.h', 'gunit_nowarn.h')
+    env.Depends(gunit_h, [gtest_dir])
 
 include = [
     gtest_path, gtest_path + '/include',
@@ -24,33 +38,10 @@ include = [
 
 env.VariantDir(Dir('.').abspath + '/gtest', gtest_path + '/src')
 env.VariantDir(Dir('.').abspath + '/gmock', gmock_path + '/src')
+env.Append(CPPPATH = include)
 
-gmocklibname = 'gmock.lib'
-gtestlibname = 'gtest{d}.lib'.format(d='d' if env['TARGET_CONFIG'] =='debug' else  '')
+lib = env.Library('gunit',
+                  [Dir('.').abspath + '/gtest/gtest-all.cc',
+                   Dir('.').abspath + '/gmock/gmock-all.cc'])
 
-gmocklibpath = os.path.join(Dir('#/build/lib').abspath, gmocklibname)
-gtestlibpath = os.path.join(Dir('#/build/lib').abspath, gtestlibname)
-
-def create_dir_if_needed(dirname):
-    try:
-        os.makedirs(dirname)
-    except OSError:
-        pass
-
-if not os.path.exists(gmocklibpath):
-   cmd = 'copy ' + Dir('.').srcnode().abspath + r'\msvc15\gmock* ' + Dir(gmock_path).abspath + r'\msvc\2015\ /y'
-   print Dir('.').abspath
-   print cmd
-   subprocess.call(cmd, shell=True)
-   #build googlemock
-   os.chdir(Dir(gmock_path).abspath+ '/msvc/2015')
-   print os.getcwd()
-   subprocess.call([os.environ['MSBUILD'], 'gmock.vcxproj', '/p:Configuration=Debug', '/p:Platform=x64'])
-   fromfile = os.path.join(Dir(gmock_path).abspath , r'msvc\2015\x64\Debug',  gmocklibname)
-   print 'copying ' + fromfile + ' to ' + gmocklibpath
-   create_dir_if_needed(Dir('#/build/lib').abspath)
-   shutil.copyfile(fromfile, gmocklibpath)
-
-
-print 'leave gunit'
-
+env.Install('#/build/lib', lib)
