--- a/lib/thrift/SConscript
+++ b/lib/thrift/SConscript
@@ -10,10 +10,10 @@ vpath = '#/third_party/thrift-0.8.0'
 env = DefaultEnvironment()
 
 if sys.platform.startswith('win'):
-    #env.Append(CCFLAGS = '/MTd')
-    newCCFLAGS = str(env['CCFLAGS'])
-    newCCFLAGS.replace("/MDd", "/MTd")
-    env.Replace(CCFLAGS = newCCFLAGS)
+    for index, flag in enumerate(env['CCFLAGS']):
+        if flag == '/MDd':
+            env['CCFLAGS'][index] = '/MTd'
+
 abs_vpath = Dir(vpath).abspath
 include_path = os.path.join(env.Dir(env['TOP_INCLUDE']).abspath, r'thrift')
 
