--- a/src/dns/cmn/SConscript
+++ b/src/dns/cmn/SConscript
@@ -21,22 +21,16 @@ buildinfo_dep_libs = ['../../dns/cfg/dns_cfg.lib', '../../dns/mgr/mgr.lib', '../
                   ]
 
 cmn_sources = ['dns.cc', 'dns_options.cc']
-buildinfoh = Dir('.').path+'\\cmnbuildinfo.h'
-buildinfocc = Dir('.').path+'\\cmnbuildinfo.cc'
-print 'buildinfoh=', buildinfoh
 env.GenerateBuildInfoCode(
-    target = ['cmnbuildinfo.h', 'cmnbuildinfo.cc'],
-    source = buildinfo_dep_libs +  cmn_sources +
-                 ['../main.cc'],
+    target = ['buildinfo.h', 'buildinfo.cc'],
+    source = buildinfo_dep_libs + ['../main.cc'],
     path = Dir('.').path)
-
-env.Depends('dns.o','cmnbuildinfo.cc')
+env.Depends('dns.o', 'buildinfo.cc')
 except_env = DnsEnv.Clone()
 except_env.CppEnableExceptions()
 
 sandesh_objs = []
 for src in SandeshGenSrcs:
-    print src
     objname = src.replace('.cpp', '.o')
     obj = except_env.Object(objname, src)
     sandesh_objs.append(obj)
