JW-885: fix io.lib build

--- a/src/io/SConscript
+++ b/src/io/SConscript
@@ -37,7 +37,7 @@ libio = env.Library('io',
              'tcp_server.cc',
              'tcp_session.cc',
              'udp_server.cc',
-             'usock_server',
+             usock_server,
             ])
 
 env.SConscript('test/SConscript', exports='BuildEnv', duplicate = 0)
