JW-885 test_vnswif

--- a/src/vnsw/agent/SConscript
+++ b/src/vnsw/agent/SConscript
@@ -277,6 +277,8 @@ def MakeTestEnvFn(self, env):
     env.Append(CCFLAGS = AgentEnv['TEST_CMN_CCFLAGS'])
     env.Prepend(LIBS = AgentEnv['CONTRAIL_LIBS'])
     env.Prepend(LIBS = AgentEnv['TEST_CMN_LIBS_PRE'])
+    if sys.platform.startswith('win'):
+        env.Prepend(LIBS = ['Dbghelp'])
     env.Append(LIBS = AgentEnv['TEST_CMN_LIBS_POST'])
     cflags = env['CCFLAGS']
     if '-fno-exceptions' in cflags:
