--- a/lib/log4cplus/SConscript
+++ b/lib/log4cplus/SConscript
@@ -10,8 +10,8 @@ vpath = '#/third_party/log4cplus-1.1.1'
 env = DefaultEnvironment()
 
 if platform.system() == 'Windows':
-    output_lib = File('#/build/lib/log4cplusD.lib')
-    output_dll = File('#/build/bin/log4cplusD.dll')
+    output_lib = File('#/build/lib/log4cplus.lib')
+    output_dll = File('#/build/bin/log4cplus.dll')
 
     def build(target, source, env):
         msbuild = [os.environ['MSBUILD'], 'log4cplus.vcxproj', '/p:PlatformToolset=v140',
