--- a/src/base/SConscript
+++ b/src/base/SConscript
@@ -66,7 +66,7 @@ if not sys.platform.startswith('win'):
     libbase_src.append('backtrace.cc')
 
 libbase = env.Library('base', libbase_src)
-env.Requires(libbase, '#/build/lib/liblog4cplus' + env['LIBSUFFIX'])
+env.Requires(libbase, '#/build/lib/' + env['LIBPREFIX'] + 'log4cplus' + env['LIBSUFFIX'])
 env.Requires(libbase, '#/build/include/boost')
 
 env.SConscript('test/SConscript', exports='BuildEnv', duplicate = 0)
