--- a/src/dns/test/SConscript
+++ b/src/dns/test/SConscript
@@ -30,14 +30,19 @@ env.Prepend(LIBS = ['dbtest', 'ifmap_vnc', 'task_test',
                     'pugixml', 'curl', 'net',
                     'ifmap_test_util', 'ifmap_test_util_server',
                     'ifmap_server', 'ifmap_common',
-                    'ifmapio', 'crypto', 'ssleay32', 'process_info',
-                    'db', 'sandeshvns', 'io', 'base', 'xml',
+                    'ifmapio', 'process_info',
+                    'db', 'sandeshvns', 'io', 'base',
                     'boost_regex', 'boost_program_options', 'gunit'])
+
+if sys.platform.startswith('win'):
+    env.Append(LIBS = ['ssleay32', 'libeay32', 'xml2'])
+else:
+    env.Append(LIBS = ['crypto', 'xml'])
 
 env.Prepend(LIBS=['dns_cfg', 'cmn', 'mgr', 'agent_xmpp', 'bind_interface'])
 env.Append(LIBS=['sandesh', 'http', 'http_parser'])
 
-if sys.platform != 'darwin':
+if not sys.platform.startswith('win') and sys.platform != 'darwin':
     env.Prepend(LINKFLAGS =
                 ['-Wl,--whole-archive',
                  '-rdynamic',
