JW-928 : Adding basic support for agent service wrapper

--- a/lib/SConscript
+++ b/lib/SConscript
@@ -47,6 +47,7 @@ elif platform.system() == 'Windows':
         'dirent',
         'openssl',
         'windowsstubs',
+        'winsw',
     ]
 
 for dir in subdirs:
